# MidiTokCpp

./: .gitmodules  CMakeLists.txt  README.md  tokenizer.json
bindings/c/: beatGenerator.h  fwd.h  gen.h  generationHistory.h  llama.h  logitProcessing.h  midiConverter.h  mistral.h  modelBuilderManager.h  musicGenerator.h  note.h  range.h  searchArgs.h  typeInfo.h  utilities.h
bindings/cpp/: abstractPipeline.hpp  logitProcessing.hpp  midiConverter.hpp  modelBuilderManager.hpp  onAddTokensArgs.hpp  range.hpp  sequencerObserver.hpp  typeinfo.hpp  utilities.hpp  vector.hpp
include/: abstractPipeline.hpp  beatGenerator.hpp  causalLMHelpers.hpp  fwd.h  gen.h  generationHistory.hpp  llama.hpp  midiConverter.hpp  midiTokenizer.h  midiTokenizer.hpp  modelLoadingParams.hpp  musicAdaptSequencer.hpp  musicGenerator.h  musicGenerator.hpp  note.h  range.hpp  redirector.hpp  tokenSequence.h  utilities.h  utilities.hpp
src/: abstractPipeline.cpp  beatGenerator.cpp  causalLMHelpers.cpp  gen.cpp  generationHistory.cpp  llama.cpp  logitProcessing.cpp  main.cc  main.cpp  main1.cpp  midiConverter.cpp  midiTokenizer.cpp  mistral.cpp  modelBuilderManager.cpp  musicGenerator.cpp  range.cpp  redirector.cpp  typeInfo.cpp  utilities.cpp
tests/: CMakeLists.txt  addNotesOnTokenTest.cpp  inference.cpp  inference.hpp  test1.cpp
